--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
         <meta charset="UTF-8"/>
         <meta name="viewport" content="widht=device-widht,initial scale=1.0"/>
         <meta http-equiv="X-U-Compatible" content="ie=edge"/>
-        <link rel="stylesheet" type="text/css" href="https://fathandhiyaan.github.io/Paten.css">
+        <link rel="stylesheet" type="text/css" href="https://ranggagit.github.io/index.css">
     </head>
     <body>
 
         <h1>
-            <b> Well hello there,
-            Welcome to Fathan's Website </b>
+            <b> hello there,
+            Welcome to Rangga's Website </b>
         </h1>
 
     <nav>
         <ul>
-            <li><a href="https://fathandhiyaan.github.io/index.html"> HOME </a></li>
-            <li><a href="https://fathandhiyaan.github.io/biodata.html"> BIODATA </a></li>
-            <li><a href="https://fathandhiyaan.github.io/gallery.html"> GALLERY </a></li>
+            <li><a href="https://ranggagit.github.io/index.html"> HOME </a></li>
+            <li><a href="https://ranggagit.github.io/biodata.html"> BIODATA </a></li>
+            <li><a href="https://ranggagit.github.io/gallery.html"> GALLERY </a></li>
         </ul>
     </nav>
 
