--- a/gallery.html
+++ b/gallery.html
@@ -4,20 +4,20 @@
         <meta charset="UTF-8"/>
         <meta name="viewport" content="widht=device-widht,initial scale=1.0"/>
         <meta http-equiv="X-U-Compatible" content="ie=edge"/>
-        <link rel="stylesheet" type="text/css" href="https://fathandhiyaan.github.io/Paten.css">
+        <link rel="stylesheet" type="text/css" href="https://rangga.github.io/index.css">
     </head>
     <body>
 
         <h1>
-            <b> Well hello there,
-            Welcome to Fathan's Website </b>
+            <b> hello there,
+            Welcome to Rangga's Website </b>
         </h1>
 
     <nav>
         <ul>
-            <li><a href="https://fathandhiyaan.github.io/fathandhiyaan.github.io/index.html"> HOME </a></li>
-            <li><a href="https://fathandhiyaan.github.io/fathandhiyaan.github.io/biodata.html"> BIODATA </a></li>
-            <li><a href="https://fathandhiyaan.github.io/fathandhiyaan.github.io/gallery.html"> GALLERY </a></li>
+            <li><a href="https://ranggagit.github.io/ranggagit.github.io/index.html"> HOME </a></li>
+            <li><a href="https://ranggagit.github.io/ranggagit.github.io/biodata.html"> BIODATA </a></li>
+            <li><a href="https://ranggagit.github.io/ranggagit.github.io/gallery.html"> GALLERY </a></li>
         </ul>
     </nav>
 
@@ -29,41 +29,41 @@
 	<div class="container">
 
 		<div class="gallery">
-			<img src="https://github.com/fathandhiyaan/fathandhiyaan.github.io/blob/main/foto1.JPG?raw=true">
+			<img src="https://github.com/ranggagit/ranggagit.github.io/blob/main/foto1.JPG?raw=true">
 		</div>
 
 		<div class="gallery">
-			<img src="https://github.com/fathandhiyaan/fathandhiyaan.github.io/blob/main/foto2.jpeg?raw=true">
+			<img src="https://github.com/ranggagit/ranggagit.github.io/blob/main/foto2.jpeg?raw=true">
 		</div>
 
 		<div class="gallery">
-			<img src="https://github.com/fathandhiyaan/fathandhiyaan.github.io/blob/main/foto3.jpg?raw=true">
+			<img src="https://github.com/ranggagit/ranggagit.github.io/blob/main/foto3.jpg?raw=true">
 
 		<div class="gallery">
-			<img src="https://github.com/fathandhiyaan/fathandhiyaan.github.io/blob/main/foto4.JPG?raw=true">
+			<img src="https://github.com/ranggagit/ranggagit.github.io/blob/main/foto4.JPG?raw=true">
 		</div>
 
 		<div class="gallery">
-			<img src="https://github.com/fathandhiyaan/fathandhiyaan.github.io/blob/main/foto5.JPG?raw=true">
+			<img src="https://github.com/ranggagit/ranggagit.github.io/blob/main/foto5.JPG?raw=true">
 		</div>
 
 		<div class="gallery">
-			<img src="https://github.com/fathandhiyaan/fathandhiyaan.github.io/blob/main/foto6.jpeg?raw=true">
+			<img src="https://github.com/ranggagit/ranggagit.github.io/blob/main/foto6.jpeg?raw=true">
 
 		<div class="gallery">
-			<img src="https://github.com/fathandhiyaan/fathandhiyaan.github.io/blob/main/foto7.jpeg?raw=true">
+			<img src="https://github.com/ranggagit/ranggagit.github.io/blob/main/foto7.jpeg?raw=true">
 		</div>
 
 		<div class="gallery">
-			<img src="https://github.com/fathandhiyaan/fathandhiyaan.github.io/blob/main/foto8.jpeg?raw=true">
+			<img src="https://github.com/ranggagit/ranggagit.github.io/blob/main/foto8.jpeg?raw=true">
 		</div>
 
 		<div class="gallery">
-			<img src="https://github.com/fathandhiyaan/fathandhiyaan.github.io/blob/main/foto9.jpeg?raw=true">
+			<img src="https://github.com/ranggagit/ranggagit.github.io/blob/main/foto9.jpeg?raw=true">
 		</div>
 
 		<div class="gallery">
-			<img src="https://github.com/fathandhiyaan/fathandhiyaan.github.io/blob/main/foto10.jpeg?raw=true">
+			<img src="https://github.com/ranggagit/ranggagit.github.io/blob/main/foto10.jpeg?raw=true">
 		</div>
 
 		
