--- a/biodata.html
+++ b/biodata.html
@@ -14,9 +14,9 @@
 
     <nav>
         <ul>
-            <li><a href="https://fathandhiyaan.github.io/fathandhiyaan.github.io/index.html"> HOME </a></li>
-            <li><a href="https://fathandhiyaan.github.io/fathandhiyaan.github.io/biodata.html"> BIODATA </a></li>
-            <li><a href="https://fathandhiyaan.github.io/fathandhiyaan.github.io/gallery.html"> GALLERY </a></li>
+            <li><a href="https://ranggagit.github.io/ranggagit.github.io/index.html"> HOME </a></li>
+            <li><a href="https://ranggagit.github.io/ranggagit.github.io/biodata.html"> BIODATA </a></li>
+            <li><a href="https://ranggagit.github.io/ranggagit.github.io/gallery.html"> GALLERY </a></li>
         </ul>
     </nav>
 
@@ -48,7 +48,7 @@
     </center>
        
         <footer>
-              <a href="https://www.instagram.com/pataenn/" class="tbl-merah">Follow me on Instagram</a>
+              <a href="https://www.instagram.com/ranggaarsya_/" class="tbl-merah">Follow me on Instagram</a>
         </footer>
 
      
