--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     </p>
 
             <footer>
-              <a href="https://www.instagram.com/pataenn/" class="tbl-merah">Follow me on Instagram</a>
+              <a href="https://www.instagram.com/ranggaarsya_/" class="tbl-merah">Follow me on Instagram</a>
             </footer>
     </body>
 </html>
