--- a/gallery.html
+++ b/gallery.html
@@ -1,80 +1,79 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8"/>
-        <meta name="viewport" content="widht=device-widht,initial scale=1.0"/>
-        <meta http-equiv="X-U-Compatible" content="ie=edge"/>
-        <link rel="stylesheet" type="text/css" href="https://rangga.github.io/index.css">
-    </head>
-    <body>
 
-        <h1>
-            <b> hello there,
-            Welcome to Rangga's Website </b>
-        </h1>
+<head>
+    <link rel="stylesheet" type="text/css" href="index.css">
+</head>
+
+<body>
+
+
+
+    <h1>
+        <b> Rangga's Web </b>
+    </h1>
 
     <nav>
         <ul>
             <li><a href="https://ranggagit.github.io/ranggagit.github.io/index.html"> HOME </a></li>
-            <li><a href="https://ranggagit.github.io/ranggagit.github.io/biodata.html"> BIODATA </a></li>
-            <li><a href="https://ranggagit.github.io/ranggagit.github.io/gallery.html"> GALLERY </a></li>
+            <li><a href="biodata.html"> BIODATA </a></li>
+            <li><a href="rangga.html"> GALLERY </a></li>
         </ul>
     </nav>
 
     <h2>
-    	Gallery about me
+        Gallery about me
     </h2>
 
 
-	<div class="container">
+    <div class="container">
 
-		<div class="gallery">
-			<img src="https://github.com/ranggagit/ranggagit.github.io/blob/main/foto1.JPG?raw=true">
-		</div>
+        <div class="gallery">
+            <img src="https://github.com/ranggagit/ranggagit.github.io/blob/main/foto1.JPG?raw=true" style="width: 100px; height: 100px;">
+        </div>
 
-		<div class="gallery">
-			<img src="https://github.com/ranggagit/ranggagit.github.io/blob/main/foto2.jpeg?raw=true">
-		</div>
+        <div class="gallery">
+            <img src="https://github.com/ranggagit/ranggagit.github.io/blob/main/foto2.jpeg?raw=true" style="width: 100px; height: 100px;">
+        </div>
 
-		<div class="gallery">
-			<img src="https://github.com/ranggagit/ranggagit.github.io/blob/main/foto3.jpg?raw=true">
+        <div class="gallery">
+            <img src="https://github.com/ranggagit/ranggagit.github.io/blob/main/foto3.jpg?raw=true" style="width: 100px; height: 100px;">
+        </div>
 
-		<div class="gallery">
-			<img src="https://github.com/ranggagit/ranggagit.github.io/blob/main/foto4.JPG?raw=true">
-		</div>
+        <div class="gallery">
+            <img src="https://github.com/ranggagit/ranggagit.github.io/blob/main/foto4.JPG?raw=true" style="width: 100px; height: 100px;">
+        </div>
 
-		<div class="gallery">
-			<img src="https://github.com/ranggagit/ranggagit.github.io/blob/main/foto5.JPG?raw=true">
-		</div>
+        <div class="gallery">
+            <img src="https://github.com/ranggagit/ranggagit.github.io/blob/main/foto5.JPG?raw=true" style="width: 100px; height: 100px;">
+        </div>
 
-		<div class="gallery">
-			<img src="https://github.com/ranggagit/ranggagit.github.io/blob/main/foto6.jpeg?raw=true">
+        <div class="gallery">
+            <img src="https://github.com/ranggagit/ranggagit.github.io/blob/main/foto6.jpeg?raw=true" style="width: 100px; height: 100px;">
+        </div>
 
-		<div class="gallery">
-			<img src="https://github.com/ranggagit/ranggagit.github.io/blob/main/foto7.jpeg?raw=true">
-		</div>
+        <div class="gallery">
+            <img src="https://github.com/ranggagit/ranggagit.github.io/blob/main/foto7.jpeg?raw=true" style="width: 100px; height: 100px;">
+        </div>
 
-		<div class="gallery">
-			<img src="https://github.com/ranggagit/ranggagit.github.io/blob/main/foto8.jpeg?raw=true">
-		</div>
+        <div class="gallery">
+            <img src="https://github.com/ranggagit/ranggagit.github.io/blob/main/foto8.jpeg?raw=true" style="width: 100px; height: 100px;">
+        </div>
 
-		<div class="gallery">
-			<img src="https://github.com/ranggagit/ranggagit.github.io/blob/main/foto9.jpeg?raw=true">
-		</div>
+        <div class="gallery">
+            <img src="https://github.com/ranggagit/ranggagit.github.io/blob/main/foto9.jpeg?raw=true" style="width: 100px; height: 100px;">
+        </div>
 
-		<div class="gallery">
-			<img src="https://github.com/ranggagit/ranggagit.github.io/blob/main/foto10.jpeg?raw=true">
-		</div>
+        <div class="gallery">
+            <img src="https://github.com/ranggagit/ranggagit.github.io/blob/main/foto10.jpeg?raw=true" style="width: 100px; height: 100px;">
+        </div>
+    </div>
 
-		
-
-
-	</div>
-
-	 <footer>
-              <a href="https://www.instagram.com/pataenn/" class="tbl-merah">Follow me on Instagram</a>
-     </footer>
+    <footer style="padding: 13px;">
+        <a href="https://www.instagram.com/pataenn/" class="tbl-merah">Follow me on Instagram</a>
+    </footer>
 
 
 </body>
+
 </html>
