--- a/gallery.html
+++ b/gallery.html
@@ -70,7 +70,7 @@
     </div>
 
     <footer style="padding: 13px;">
-        <a href="https://www.instagram.com/pataenn/" class="tbl-merah">Follow me on Instagram</a>
+        <a href="https://www.instagram.com/ranggaarsya_/" class="tbl-merah">Follow me on Instagram</a>
     </footer>
 
 
