--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <ul>
             <li><a href="https://ranggagit.github.io/ranggagit.github.io/index.html"> HOME </a></li>
             <li><a href="https://ranggagit.github.io/ranggagit.github.io/biodata.html"> BIODATA </a></li>
-            <li><a href="rangga.html"> GALLERY </a></li>
+            <li><a href="biodata.html"> GALLERY </a></li>
         </ul>
     </nav>
 
