--- a/gallery.html
+++ b/gallery.html
@@ -17,7 +17,7 @@
         <ul>
             <li><a href="https://ranggagit.github.io/ranggagit.github.io/index.html"> HOME </a></li>
             <li><a href="biodata.html"> BIODATA </a></li>
-            <li><a href="rangga.html"> GALLERY </a></li>
+            <li><a href="index.html"> GALLERY </a></li>
         </ul>
     </nav>
 
