--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <body>
 
         <h1>
-            <b> Well hello there,
-            Welcome to Fathan's Website </b>
+            <b> Hello there,
+            Welcome to Rangga's Website </b>
         </h1>
 
     <nav>
